--- a/dts/bindings/sensor/st,stm32-qdec.yaml
+++ b/dts/bindings/sensor/st,stm32-qdec.yaml
@@ -19,30 +19,16 @@ properties:
   st,encoder-mode:
     type: int
     description: |
-      Set encoder mode.
-      The following modes are supported:
-      0x1: Encoder mode 1 (Default)
-      0x2: Encoder mode 2
-      0x3: Encoder mode 3
-      Some MCUs supports additional modes:
-      0x10002: Encoder mode: Clock plus direction, x2 mode
-      0x10003: Encoder mode: Clock plus direction, x1 mode
-      0x10004: Encoder mode: Directional Clock, x2 mode
-      0x10005: Encoder mode: Directional Clock, x1 mode
-      0x10006: Quadrature encoder mode: x1 mode, counting on tim_ti1fp1
-      0x10007: Quadrature encoder mode: x1 mode, counting on tim_ti2fp2
-      Default value complies with stm32 low level timer encoder init value.
-    default: 0x1
+      Encoder counting mode
+      MODE_X2_TI1 Counter counts up/down on TI2FP2 edge depending on TI1FP1 level
+      MODE_X2_TI2  Counter counts up/down on TI1FP1 edge depending on TI2FP2 level
+      MODE_X4_TI12 Counter counts up/down on both TI1FP1 and TI2FP2 edges
+      depending on the level of the other input
+    required: true
     enum:
-      - 0x1
-      - 0x2
-      - 0x3
-      - 0x10002
-      - 0x10003
-      - 0x10004
-      - 0x10005
-      - 0x10006
-      - 0x10007
+      - 0 # MODE_X2_TI1
+      - 1 # MODE_X2_TI2
+      - 2 # MODE_X4_TI1
 
   st,input-polarity-inverted:
     type: boolean
